add new css style

--- a/index.html
+++ b/index.html
@@ -4,20 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Defination of Cow</title>
-    <link rel="stylesheet" href="styles/cow.css">
+    <link rel="stylesheet" href="styles/cow.css" />
+    
   </head>
-  <body>
-    <div class="goru">
-      <h1>The Cow</h1>
+  <body class="one">
+    <div class="container">
+      <img src="cow.jpg" alt="cow coming soon" width="100%" />
+      <div class="content">
+        <h1>The Cow</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+          cupiditate temporibus alias dolores consectetur aperiam, ipsam autem
+          magni molestias accusantium amet, dolore porro dicta?
+        </p>
+      </div>
     </div>
-    <div class="bolod">
-      <h2>An Easy About Cow</h2>
-      <p>
-        Cow is an domestic Animal. Cow gives milk for our. Lorem ipsum dolor,
-        sit amet consectetur adipisicing elit. Debitis eum cupiditate ipsa
-        labore delectus voluptate veritatis a, adipisci tenetur maxime sapiente
-        ab, dolore dolorum id ea quo, quisquam aliquid voluptatum!
-      </p>
+    <div class="cow">
+      <h1>Type of a Cow</h1>
+      <p>There are three type of cow.</p>
+    </div>
+   
+    <div class="container">
+      <img src="cow.jpg" alt="cow coming soon" width="100%" />
+      <!-- <img src="https://thumbs.dreamstime.com/z/red-cow-pasture-looks-right-camera-red-cow-pasture-looks-right-129296852.jpg?ct=jpeg" alt="red cow" width="100%"> -->
+      <div class="content">
+        <h1>Red Cow</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti aliquid soluta, atque nesciunt quisquam sit! Libero, id? Sequi repudiandae nulla blanditiis? Aliquid, saepe?</p>
+      </div>  
     </div>
   </body>
 </html>
